Harden security, cli improvements.